<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TabLayoutPracticeApp</string>
    <string name="one" tools:ignore="ExtraTranslation">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recents">Recents</string>
    <string name="heart">Heart</string>
    <string name="near_by">NearBy</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="seven">Seven</string>
    <string name="six">Six</string>
    <string name="image1">Image1</string>
    <string name="image2">Image2</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
</resources>
