<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">
    <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar_layout"
                android:layout_height="wrap_content"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="@color/colorPrimary"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent">

            <ImageView android:layout_width="match_parent"
                       android:fitsSystemWindows="true"
                       android:scaleType="centerCrop"
                       app:layout_collapseMode="parallax"
                       android:src="@drawable/fruitninja"
                       android:layout_height="300dp"
                       android:contentDescription="fruit"/>

            <android.support.v7.widget.Toolbar
                    android:id="@+id/tool_bar"
                    app:layout_collapseMode="pin"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/one"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/two"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/three"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/four"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/five"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/six"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:text="@string/seven"
                      android:layout_margin="16dp"
                      android:layout_height="wrap_content"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:id="@+id/fab_button"
            app:fabSize="normal"
            android:src="@drawable/star"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|end"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"/>

</android.support.design.widget.CoordinatorLayout>